--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,5 +21,8 @@
     "morgan": "^1.10.0",
     "node": "^19.3.0",
     "react-toastify": "^9.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
